@@ -1,3 +1,8 @@
+2014-03-17  Ram RS  <ramrs@nyu.edu>
+
+	* extract-partitions.py: pylint warnings addressed
+	* test_scripts.py: tests added to cover extract-partitions completely 
+
 2014-03-13  Ram RS  <ramrs@nyu.edu>
 
 	* Bug fix: tests.test_normalize_by_median_no_bigcount() now runs
